# simple-local-rag

./: .gitignore  LICENSE  README.md  USER_GUIDE.md  app.py  main.py  pyproject.toml
config/: settings.py
data/documents/: nimbus-audio-support-policy.md  project-meridian-mission-report.md  sample-document.md  sample-text.txt
docs/guides/: 01-concepts.md  02-setup.md  03-codebase-tour.md  04-using-the-rag.md  05-generation.md  06-chat-ui.md  07-evaluation.md  08-reference.md  README.md
docs/tasks/: 01-simplify-rag-core.md  02-search-returns-results.md  03-local-llm-generation.md  04-streamlit-chat-ui.md  05-golden-dataset.md  06-evals-promptfoo.md  07-evals-deepeval.md  08-evals-ragas.md  09-conversational-rag.md  README.md
eval/: dataset.csv  dataset.yaml
eval/deepeval/: README.md  test_rag.py
eval/promptfoo/: README.md  generate_tests.py  promptfooconfig.yaml  rag_provider.py
eval/ragas/: README.md  run_ragas.py
utils/: __init__.py  document_processor.py  document_search.py  rag.py
