[project]
name = "local-rag-solution"
version = "0.1.0"
description = "Local RAG Solution with LangChain and ChromaDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core LangChain
    "langchain>=0.3.0",
    "langchain-huggingface>=0.1.0",
    # Embeddings
    "sentence-transformers>=3.0.0",
    "transformers>=4.44.0",
    "torch>=2.4.0",
    # Document processing
    "python-dotenv>=1.0.1",
    # Utilities
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "chromadb>=0.5.0",
    "langchain-ollama>=0.3.10",
    "ollama>=0.6.2",
    "streamlit>=1.58.0",
    "deepeval>=3.9.6",
    "ragas>=0.4.3",
]
